--- a/templates/base.html
+++ b/templates/base.html
@@ -17,8 +17,8 @@
                 {%endblock breadcrumb%}
             </ol>
         </nav>
-        {% block content%}
-        {%endblock content%}
+        {% block body%}
+        {%endblock body%}
     </div>
 </body>
 </html>
